--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -260,7 +260,8 @@
         "description": "Get SCAN returns depending on the amount of SCAN that you stake on the platform.",
         "insert_valid_amount": "Please insert valid amount",
         "early_unstake_alert": "If you withdraw your funds before the end of the staking period, you will be penalized with 10% of your stake and you will lose the rewards.",
-        "sure_to_continue": "Are you sure to continue?"
+        "sure_to_continue": "Are you sure to continue?",
+        "consult": "Consult here the exact associated APR"
     },
     "swap.txt": {
         "max": "Max",
