Added previous class button on all lessons

--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -128,6 +128,7 @@
         "notes_lesson": "Hinterlassen Sie Ihre Notizen zu dieser Lektion",
         "by": "Von",
         "next_class": "N\u00e4chster Kurs",
+        "previous_class": "Vorherige Kurs",
         "mean": "Durchschnitt|Durchschnitte",
         "note": "Anmerkung|Anmerkungen",
         "recommendation": "Hier ist das Buch, das ich empfehle, um mehr Wissen \u00fcber dieses Thema zu erhalten."
