--- a/resources/lang/multilang.json
+++ b/resources/lang/multilang.json
@@ -129,6 +129,7 @@
             "notes_lesson": "Hinterlassen Sie Ihre Notizen zu dieser Lektion",
             "by": "Von",
             "next_class": "N\u00e4chster Kurs",
+            "previous_class": "Vorherige Kurs",
             "mean": "Durchschnitt|Durchschnitte",
             "note": "Anmerkung|Anmerkungen",
             "recommendation": "Hier ist das Buch, das ich empfehle, um mehr Wissen \u00fcber dieses Thema zu erhalten."
@@ -554,6 +555,7 @@
             "notes_lesson": "Leave your notes about this lesson",
             "by": "By",
             "next_class": "Next class",
+            "previous_class": "Previous class",
             "mean": "Mean|Means",
             "note": "Note|Notes",
             "recommendation": "Here is the book that I recommend to read and get more advanced knowledge about this topic."
@@ -991,6 +993,7 @@
             "notes_lesson": "Deja tus notas sobre esta lecci\u00f3n",
             "by": "Por",
             "next_class": "Pr\u00f3xima clase",
+            "previous_class": "Clase anterior",
             "mean": "Media|Medias",
             "note": "Nota|Notas",
             "recommendation": "Aqu\u00ed est\u00e1 el libro que recomiendo para leer y obtener un conocimiento m\u00e1s avanzado sobre este tema."
@@ -1424,6 +1427,7 @@
             "notes_lesson": "Zostaw swoje notatki dotycz\u0105ce tej lekcji",
             "by": "Przez",
             "next_class": "Nast\u0119pna klasa",
+            "previous_class": "Poprzednie klasa",
             "mean": "\u015arednia|\u015arednie",
             "note": "Notatka|Notatki",
             "recommendation": "Oto ksi\u0105\u017cka, kt\u00f3r\u0105 polecam do przeczytania i zdobycia bardziej zaawansowanej wiedzy na ten temat."
