--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -124,6 +124,7 @@
         "notes_lesson": "Zostaw swoje notatki dotycz\u0105ce tej lekcji",
         "by": "Przez",
         "next_class": "Nast\u0119pna klasa",
+        "previous_class": "Poprzednie klasa",
         "mean": "\u015arednia|\u015arednie",
         "note": "Notatka|Notatki",
         "recommendation": "Oto ksi\u0105\u017cka, kt\u00f3r\u0105 polecam do przeczytania i zdobycia bardziej zaawansowanej wiedzy na ten temat."
