--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -128,6 +128,7 @@
         "notes_lesson": "Leave your notes about this lesson",
         "by": "By",
         "next_class": "Next class",
+        "previous_class": "Previous class",
         "mean": "Mean|Means",
         "note": "Note|Notes",
         "recommendation": "Here is the book that I recommend to read and get more advanced knowledge about this topic."
