--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -128,6 +128,7 @@
         "notes_lesson": "Deja tus notas sobre esta lecci\u00f3n",
         "by": "Por",
         "next_class": "Pr\u00f3xima clase",
+        "previous_class": "Clase anterior",
         "mean": "Media|Medias",
         "note": "Nota|Notas",
         "recommendation": "Aqu\u00ed est\u00e1 el libro que recomiendo para leer y obtener un conocimiento m\u00e1s avanzado sobre este tema."
