Hot fix Spanish Language translation

--- a/resources/lang/multilang.json
+++ b/resources/lang/multilang.json
@@ -968,7 +968,7 @@
             "controversy": "Controversia|Controversias",
             "you_see": "Ya vera...",
             "education": "Educaci\u00f3n",
-            "finance": "Finanza",
+            "finance": "Finanzas",
             "logout": "Cierre de sesi\u00f3n",
             "show_balance": "Mostrar saldo|Mostrar saldos",
             "language": "Idioma|Los idiomas",
